--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BOOTCAMP DNC</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <nav>
+        <div>
+            <a href="">Home</a>
+            <a href="">Ultimas Edições</a>
+            <a href="">Requisitos para participar</a>
+        </div>
+        <button>Login</button>
+    </nav>
+
 </body>
+
 </html>
