--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <nav>
-        <div>
+    <nav id="principal">
+        <div id="menu">
             <a href="">Home</a>
             <a href="">Ultimas Edições</a>
             <a href="">Requisitos para participar</a>
