inicio visual formulario

--- a/Index.html
+++ b/Index.html
@@ -22,25 +22,26 @@
     <!--CABEÇALHO-->
     <section>
         <header>
-            <h1 id="tituloCabecalho">BOOTCAMP DNC</h1>
-            <h2 id="paragrafo">
+            <h1>BOOTCAMP DNC</h1>
+            <h2>
                 Esse será um evento exclusivo para todos os alunos<br>
-                da <b>DNC</b>, que querem <span class="fundoEscuro">celerar a carreira</span> com uma<br>
+                da <b>DNC</b>, que querem <span class="fundoEscuro">acelerar a carreira</span> com uma<br>
                 semana intensiva de conteúdo de mercado entre<br>
                 <span class="fundoEscuro">BACK-END, FRONT-END & BANCO DE DADOS.</span>
             </h2>
         </header>
+        
         <form>
             <div class="form-group">
-                <label>Nome:</label><br>
+                <label>Nome:</label>
                 <input type="text" placeholder="Insira seu nome aqui">
             </div>
             <div class="form-group">
-                <label>Sobrenome:</label><br>
+                <label>Sobrenome:</label>
                 <input type="text" placeholder="Insira seu sobrenome aqui">
             </div>
             <div class="form-group">
-                <label>Área de interesse:</label><br>
+                <label>Área de interesse:</label>
                 <div class="checkbox-itens">
                     <input name="areaInteresse" type="checkbox" value="Front-End"> Front-End
                     <input name="areaInteresse" type="checkbox" value="Back-End"> Back-End
@@ -48,18 +49,18 @@
                 </div>
             </div>
             <div class="form-group">
-                <label>E-mail:</label><br>
+                <label>E-mail:</label>
                 <input type="email" placeholder="Insira seu E-mail aqui">
             </div>
             <div class="form-group">
-                <label>Telefone:</label><br>
+                <label>Telefone:</label>
                 <input type="text" placeholder=" (99) 99999-9999">
             </div>
             <div class="form-group">
-                <label>Insira uma frase criativa aqui:</label><br>
+                <label>Insira uma frase criativa aqui:</label>
                 <input type="text" placeholder="Qual frase criativa você gostaria de falar? :)">
             </div>
-            <div class="form-group">
+            <div>
                 <button type="submit">Cadastrar</button>
             </div>
         </form>
