finalização do formulario

--- a/Index.html
+++ b/Index.html
@@ -43,9 +43,15 @@
             <div class="form-group">
                 <label>Área de interesse:</label>
                 <div class="checkbox-itens">
-                    <input name="areaInteresse" type="checkbox" value="Front-End"> Front-End
-                    <input name="areaInteresse" type="checkbox" value="Back-End"> Back-End
-                    <input name="areaInteresse" type="checkbox" value="Banco-De-Dados"> Banco de Dados
+                    <input name="FRONT-END" type="checkbox" value="Front-End"> 
+                    <label name="FRONT-END">Front-End</label>
+                    
+                    <input name="BACK-END" type="checkbox" value="Back-End"> 
+                    <label name="BACK-END">Back-End</label>
+
+                    <input name="Banco-De-Dados" type="checkbox" value="Banco-De-Dados"> 
+                    <label name="Banco-De-Dados">Banco de Dados</label>
+                    
                 </div>
             </div>
             <div class="form-group">
@@ -61,7 +67,7 @@
                 <input type="text" placeholder="Qual frase criativa você gostaria de falar? :)">
             </div>
             <div>
-                <button type="submit">Cadastrar</button>
+                <input type="submit" value="Login">
             </div>
         </form>
     </section>
